--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,7 +1,7 @@
 {
   "$schema": "./node_modules/wrangler/config-schema.json",
   "main": ".open-next/worker.js",
-  "name": "my-app",
+  "name": "cape-canaveral-fe",
   "compatibility_date": "2026-02-07",
   "compatibility_flags": [
     "nodejs_compat"
